--- a/UtopiaCity/Views/Sport/Index.cshtml
+++ b/UtopiaCity/Views/Sport/Index.cshtml
@@ -1,99 +1,52 @@
 ﻿@{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Sport";
 }
 
-<!--<div class="sportIndex">
-    <div class="col">-->
-    <hr />
-        <div>
-            <div id="sportComplexCarousel" class="carousel slide w-100" data-ride="carousel">
-                <div class="carousel-inner">
-                    <ol class="carousel-indicators">
-                        <li data-target="#sportComplexCarousel" data-slide-to="0" class="active"></li>
-                        @{ int sportComplexCounter = 1; }
-                        @foreach (var sportComplex in ViewBag.SportComplexes)
-                        {
-                            <li data-target="#sportComplexCarousel" data-slide-to="@sportComplexCounter"></li>
-                            sportComplexCounter++;
-                        }
-                    </ol>
-                    <div class="carousel-item active">
-                        <img src=@("/images/sport-complexes/CommonActivities.jpg") class="d-block w-100 rounded sportComplexImage" alt="CommonActivities">
-                        <div class="container">
-                            <h5>Sport complexes of Utopia City</h5>
-                        </div>
-                    </div>
-                    @foreach (var sportComplex in ViewBag.SportComplexes)
-                    {
-                        <div class="carousel-item">
-                            <img src=@("/images/sport-complexes/" + sportComplex.TypeOfSport + ".jpg") class="d-block w-100 rounded sportComplexImage" alt="@sportComplex.Title">
-                            <div class="container">
-                                <h5>@sportComplex.Title</h5>
-                            </div>
-                        </div>
-                    }
+<hr />
+<div>
+    <div id="sportComplexCarousel" class="carousel slide w-100" data-ride="carousel">
+        <div class="carousel-inner">
+            <ol class="carousel-indicators">
+                <li data-target="#sportComplexCarousel" data-slide-to="0" class="active"></li>
+                @{ int sportComplexCounter = 1; }
+                @foreach (var sportComplex in ViewBag.SportComplexes)
+                {
+                    <li data-target="#sportComplexCarousel" data-slide-to="@sportComplexCounter"></li>
+                    sportComplexCounter++;
+                }
+            </ol>
+            <div class="carousel-item active">
+                <img src=@("/images/sport-complexes/CommonActivities.jpg") class="d-block w-100 rounded sportComplexImage" alt="CommonActivities">
+                <div class="container">
+                    <h5>Sport complexes of Utopia City</h5>
                 </div>
-                <a href="#sportComplexCarousel" class="carousel-control-prev" role="button" data-slide="prev">
-                    <span class="sr-only">Previous</span>
-                    <span class="carousel-control-prev-icon" aria-hidden="true">
-                    </span>
-                </a>
-                <a href="#sportComplexCarousel" class="carousel-control-next" role="button" data-slide="next">
-                    <span class="sr-only">Next</span>
-                    <span class="carousel-control-next-icon" aria-hidden="true">
-                    </span>
-                </a>
             </div>
-        </div>
-        <div>
-            <a role="button" class="btn btn-outline-primary" asp-controller="SportComplex" asp-action="AllSportComplexes">Our Sport Complexes</a>
-        </div>
-    <!--</div>-->
-    @*<div class="col">
-        <div>
-            <div id="sportEventCarousel" class="carousel slide w-100" data-ride="carousel">
-                <div class="carousel-inner">
-                    <ol class="carousel-indicators">
-                        <li data-target="#sportEventCarousel" data-slide-to="0" class="active"></li>
-                        @foreach (var sportEvent in ViewBag.SportEvents)
-                        {
-                            <li data-target="#sportEventCarousel" data-slide-to="@sportEventCounter"></li>
-                            sportEventCounter++;
-                        }
-                    </ol>
-                    <div class="carousel-item active">
-                        <img src=@("/images/sport-complexes/CommonActivities.jpg") class="d-block w-100 rounded sportComplexImage" alt="CommonActivities">
-                        <div class="container">
-                            <h5>Sport events of Utopia City</h5>
-                        </div>
+            @foreach (var sportComplex in ViewBag.SportComplexes)
+            {
+                <div class="carousel-item">
+                    <img src=@("/images/sport-complexes/" + sportComplex.TypeOfSport + ".jpg") class="d-block w-100 rounded sportComplexImage" alt="@sportComplex.Title">
+                    <div class="container">
+                        <h5>@sportComplex.Title</h5>
                     </div>
-                    @foreach (var sportEvent in ViewBag.SportEvents)
-                    {
-                        <div class="carousel-item">
-                            <img src=@("/images/sport-complexes/CommonActivities.jpg") class="d-block w-100 rounded sportComplexImage" alt="@sportEvent.Title">
-                            <div class="container">
-                                <h3>@sportEvent.Title</h3>
-                            </div>
-                        </div>
-                    }
                 </div>
-                <a href="#sportEventCarousel" class="carousel-control-prev" role="button" data-slide="prev">
-                    <span class="sr-only">Previous</span>
-                    <span class="carousel-control-prev-icon" aria-hidden="true">
-                    </span>
-                </a>
-                <a href="#sportEventCarousel" class="carousel-control-next" role="button" data-slide="next">
-                    <span class="sr-only">Next</span>
-                    <span class="carousel-control-next-icon" aria-hidden="true">
-                    </span>
-                </a>
-            </div>
+            }
         </div>
-        <div>
-            <a role="button" class="btn btn-outline-primary" asp-controller="SportEvent" asp-action="AllSportEvents">Our Sport Events</a>
-        </div>
-    </div>*@
-<!--</div>-->
+        <a href="#sportComplexCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+            <span class="sr-only">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true">
+            </span>
+        </a>
+        <a href="#sportComplexCarousel" class="carousel-control-next" role="button" data-slide="next">
+            <span class="sr-only">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true">
+            </span>
+        </a>
+    </div>
+</div>
+<div>
+    <a role="button" class="btn btn-outline-primary" asp-controller="SportComplex" asp-action="AllSportComplexes">Our Sport Complexes</a>
+</div>
+
 <hr />
 <div class="row">
     <h4 class="mr-3">You can also look through our Sport Events:</h4>
