--- a/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
+++ b/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
@@ -6,6 +6,43 @@
 
 <h1>ListTimelineView</h1>
 <clock></clock>
+<div class="clock"></div>
+@section Scripts{ 
+<script>
+    $(document).ready(function () {
+        clockUpdate();
+        setInterval(clockUpdate, 1000);
+    })
+
+    function clockUpdate() {
+        var date = new Date();
+        $('.clock').css({ 'color': '#212529'});
+        function addZero(x) {
+            if (x < 10) {
+                return x = '0' + x;
+            } else {
+                return x;
+            }
+        }
+
+        function twelveHour(x) {
+            if (x > 12) {
+                return x = x - 12;
+            } else if (x == 0) {
+                return x = 12;
+            } else {
+                return x;
+            }
+        }
+
+        var h = addZero(twelveHour(date.getHours()));
+        var m = addZero(date.getMinutes());
+        var s = addZero(date.getSeconds());
+
+        $('.clock').text(h + ':' + m + ':' + s)
+    }
+</script>
+}
 <ul class="navbar-nav flex-grow-1">
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Schedule" asp-action="Index">Расписание</a>
