--- a/UtopiaCity/Views/Sport/Index.cshtml
+++ b/UtopiaCity/Views/Sport/Index.cshtml
@@ -4,7 +4,26 @@
 
 <hr />
 <div>
-    <div id="sportComplexCarousel" class="carousel slide w-100" data-ride="carousel">
+    <h5>Sport Achievements</h5>
+    <ul class="list-group-horizontal-md">
+        @{
+            if (ViewBag.SportAchievements == null)
+            {
+                <li>There are no new sport achievements</li>
+            }
+            else
+            {
+                foreach (var sportAchievement in ViewBag.SportAchievements)
+                {
+                    <li>@sportAchievement.Title | @sportAchievement.Date | @sportAchievement.Description</li>
+                }
+            }
+        }
+    </ul>
+</div>
+<hr />
+<div>
+    <div id="sportComplexCarousel" class="carousel slide w-75" data-ride="carousel">
         <div class="carousel-inner">
             <ol class="carousel-indicators">
                 <li data-target="#sportComplexCarousel" data-slide-to="0" class="active"></li>
@@ -23,7 +42,7 @@
             </div>
             @foreach (var sportComplex in ViewBag.SportComplexes)
             {
-                <div class="carousel-item">
+                <div class="carousel-item" data-interval="3000">
                     <img src=@("/images/sport-complexes/" + sportComplex.TypeOfSport + ".jpg") class="d-block w-100 rounded sportComplexImage" alt="@sportComplex.Title">
                     <div class="container">
                         <h5>@sportComplex.Title</h5>
@@ -49,6 +68,6 @@
 
 <hr />
 <div class="row">
-    <h4 class="mr-3">You can also look through our Sport Events:</h4>
+    <h5 class="mr-3">You can also look through our Sport Events:</h5>
     <a role="button" class="btn btn-sm btn-outline-primary" asp-controller="SportEvent" asp-action="AllSportEvents">Our Sport Events</a>
 </div>
