--- a/UtopiaCity/Views/CitizensAccount/ShowUserCabinet.cshtml
+++ b/UtopiaCity/Views/CitizensAccount/ShowUserCabinet.cshtml
@@ -8,7 +8,7 @@
         <input type="submit" value="Friends" class="btn btn-primary" />
     </div>
 </a>
-<a asp-action="">
+<a asp-action="Index" asp-controller="CitizensTasks">
     <div class="form-group">
         <input type="submit" value="My tasks" class="btn btn-primary" />
     </div>
