--- a/UtopiaCity/Views/CitizensAccount/IndexAsync.cshtml
+++ b/UtopiaCity/Views/CitizensAccount/IndexAsync.cshtml
@@ -49,6 +49,5 @@
 
 <div>
     <a asp-action="DeleteAppUser" class="btn btn-danger">Delete account</a>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to Cabinet</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
 </div>
