--- a/UtopiaCity/Views/CitizensTasks/Index.cshtml
+++ b/UtopiaCity/Views/CitizensTasks/Index.cshtml
@@ -3,15 +3,23 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h1>Task List</h1>
-<p>
-    <a asp-action="Create">Create New Task</a>
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Task List</h1>
+        </div>
+        <div  class="col">
+            <p>
+                <a asp-action="Create" class="btn btn-primary m-1">Create New Task</a>
+            </p>
+        </div>
+    </div>
+</div>
 
 @foreach (var item in Model)
 {
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col">
             <div class="card border-primary mb-3" style="width: 18rem;">
                 <div class="card-body">
                     <div class="card-header">@item.Description</div>
@@ -24,3 +32,4 @@
         </div>
     </div>
 }
+
