--- a/UtopiaCity/Views/Shared/_LayoutForCitizenAccount.cshtml
+++ b/UtopiaCity/Views/Shared/_LayoutForCitizenAccount.cshtml
@@ -1,84 +1,20 @@
-﻿@using static UtopiaCity.Controllers.CitizenAccount.CitizensTasksController; 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - UtopiaCity</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/life.css">
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">UtopiaCity</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="EmergencyReport" asp-action="Index">Emergency Reports</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SportComplex" asp-action="AllSportComplexes">Sport Complexes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Flight" asp-action="Index">Travelling</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Tickets Service</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="WeatherReport" asp-action="Index">Weather Forecast</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TimelineBasic" asp-action="Index">Timeline</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TransportManagers" asp-action="Index">AirportTransportSystem</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="RersidentAccount" asp-action="Index">City Administration</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Life" asp-action="Index">Life</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CitizensAccount" asp-action="Index">Citizen's Account</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+﻿@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
+@{
+    Layout = "/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "CitizenAccount";
+}
 
-
-    <div class="row justify-content-start">
-        <div class="col-2 ml-3">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3" style="background-color:white; padding:0">
             <partial name="_ShowUserCabinetPartial" />
         </div>
-        <div class="col-7">
-            @RenderBody()
+        <div class="col-sm-9" style="background-color:white; align-content:center;">
+            <div class="container">
+                @RenderBody()
+            </div>
         </div>
     </div>
-
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - UtopiaCity - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/life_search.js"></script>
-    @RenderSection("Scripts", required: false)
-</body>
-</html>
+</div>
+@RenderSection("Scripts", required: false)
