--- a/UtopiaCity/Views/Shared/_ShowUserCabinetPartial.cshtml
+++ b/UtopiaCity/Views/Shared/_ShowUserCabinetPartial.cshtml
@@ -1,26 +1,26 @@
-﻿<a asp-action="Index" asp-controller="CitizensAccount">
-    <div class="form-group">
-        <input type="submit" value="CitizenAccountPage" class="btn btn-primary" />
-    </div>
-</a>
+﻿    <a asp-action="Index" asp-controller="CitizensAccount">
+        <div class="form-group">
+            <input type="submit" value="CitizenAccountPage" class="btn btn-primary" />
+        </div>
+    </a>
 
-<a asp-action="IndexFriends" asp-controller="CitizenFriends">
-    <div class="form-group">
-        <input type="submit" value="Friends" class="btn btn-primary" />
-    </div>
-</a>
-<a asp-action="Index" asp-controller="CitizensTasks">
-    <div class="form-group">
-        <input type="submit" value="My tasks" class="btn btn-primary" />
-    </div>
-</a>
-<a asp-action="">
-    <div class="form-group">
-        <input type="submit" value="My certificates" class="btn btn-primary" />
-    </div>
-</a>
-<a asp-action="">
-    <div class="form-group">
-        <input type="submit" value="My payments" class="btn btn-primary" />
-    </div>
-</a>
+    <a asp-action="IndexFriends" asp-controller="CitizenFriends">
+        <div class="form-group">
+            <input type="submit" value="Friends" class="btn btn-primary" />
+        </div>
+    </a>
+    <a asp-action="Index" asp-controller="CitizensTasks">
+        <div class="form-group">
+            <input type="submit" value="My tasks" class="btn btn-primary" />
+        </div>
+    </a>
+    <a asp-action="Index" asp-controller="CitizenFinance">
+        <div class="form-group">
+            <input type="submit" value="My finance" class="btn btn-primary" />
+        </div>
+    </a>
+    <a asp-action="">
+        <div class="form-group">
+            <input type="submit" value="My payments" class="btn btn-primary" />
+        </div>
+    </a>
