--- a/UtopiaCity/Views/Shared/_ShowUserCabinetPartial.cshtml
+++ b/UtopiaCity/Views/Shared/_ShowUserCabinetPartial.cshtml
@@ -19,8 +19,8 @@
             <input type="submit" value="My finance" class="btn btn-primary" />
         </div>
     </a>
-    <a asp-action="">
+    <a asp-action="BlockUser" asp-controller="CitizensAccount"> 
         <div class="form-group">
-            <input type="submit" value="My payments" class="btn btn-primary" />
+            <input type="submit" value="Block citizen account user by Id" class="btn btn-danger"/>
         </div>
     </a>
